<?xml version="1.0" encoding="utf-8"?>

<!--
 ! Copyright 2009-2021 Ping Identity Corporation
 ! All Rights Reserved.
 -->
<!--
 ! Copyright 2009-2021 Ping Identity Corporation
 !
 ! Licensed under the Apache License, Version 2.0 (the "License");
 ! you may not use this file except in compliance with the License.
 ! You may obtain a copy of the License at
 !
 !    http://www.apache.org/licenses/LICENSE-2.0
 !
 ! Unless required by applicable law or agreed to in writing, software
 ! distributed under the License is distributed on an "AS IS" BASIS,
 ! WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 ! See the License for the specific language governing permissions and
 ! limitations under the License.
 -->
<!--
 ! Copyright (C) 2009-2021 Ping Identity Corporation
 !
 ! This program is free software; you can redistribute it and/or modify
 ! it under the terms of the GNU General Public License (GPLv2 only)
 ! or the terms of the GNU Lesser General Public License (LGPLv2.1 only)
 ! as published by the Free Software Foundation.
 !
 ! This program is distributed in the hope that it will be useful,
 ! but WITHOUT ANY WARRANTY; without even the implied warranty of
 ! MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 ! GNU General Public License for more details.
 !
 ! You should have received a copy of the GNU General Public License
 ! along with this program; if not, see <http://www.gnu.org/licenses>.
 -->



<!--
 ! This layout defines the form used to provide the information needed to
 ! perform a search in a specified directory instance.
 -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

  <LinearLayout android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:padding="5dp">

    <!-- The Search Type -->
    <LinearLayout android:orientation="vertical"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:paddingTop="7dp"
                  android:paddingBottom="7dp">
      <TextView   android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:textSize="10sp"
                  android:text="@string/layout_search_server_label_search_type" />
      <Spinner    android:id="@+id/layout_search_server_spinner_search_type"
                  android:layout_width="fill_parent"
                  android:layout_height="fill_parent" />
    </LinearLayout>

    <!-- The Search Text -->
    <LinearLayout android:orientation="vertical"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:paddingTop="7dp"
                  android:paddingBottom="7dp">
      <TextView   android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:textSize="10sp"
                  android:text="@string/layout_search_server_label_search_text" />
      <EditText   android:id="@+id/layout_search_server_field_search_text"
                  android:layout_width="fill_parent"
                  android:layout_height="fill_parent"
                  android:singleLine="true" />
    </LinearLayout>

    <!-- The Search Button -->
    <LinearLayout android:orientation="horizontal"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:paddingTop="7dp"
                  android:paddingBottom="7dp"
                  android:gravity="center">
      <Button     android:id="@+id/layout_search_server_button_search"
                  android:layout_width="wrap_content"
                  android:layout_height="fill_parent"
                  android:paddingLeft="10dp"
                  android:paddingRight="10dp"
                  android:text="@string/layout_search_server_button_label_search" />
    </LinearLayout>

  </LinearLayout>

</ScrollView>

